<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="could.bluepay.renyumvvm.viewmodel.LoginActivityViewModel"/>
    </data>

<RelativeLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <EditText
            android:id="@+id/et_username"
            style="@style/activity_login_edittext"
            android:drawableLeft="@drawable/register_user"
            android:hint="@string/activity_login_account_hint"
            android:imeOptions="actionNext"
            android:text="@={viewModel.loginViewStyle.userName}"
            />
        <EditText
            android:id="@+id/et_psw"
            style="@style/activity_login_edittext"
            android:drawableLeft="@drawable/register_password"
            android:hint="@string/activity_login_password_hint"
            android:text="@={viewModel.loginViewStyle.psw}"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="295dp"
            style="@style/common_square_button"
            android:layout_marginTop="5dp"
            android:text="@string/activity_login_sign_in"
            android:onClick="@{viewModel.loginCallback}"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">
            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                style="@style/activity_login_text_button"
                android:text="@string/activity_login_register"
                android:onClick="@{viewModel.toRegister}"/>
            <TextView
                android:id="@+id/tv_forgot_psw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                style="@style/activity_login_text_button"
                android:text="@string/activity_login_forgot_password"/>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>

</layout>