<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#CC000000">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deliver_title"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_photo_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/photo_normal"
                android:textColor="@android:color/white"
                android:drawableTop="@drawable/photo_normal_selector"
                android:drawablePadding="10dp"
                android:gravity="center_horizontal"
                android:textSize="13sp"
                android:clickable="true"
                />
            <TextView
                android:id="@+id/tv_photo_red_package"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/photo_red_package"
                android:textColor="@android:color/white"
                android:drawableTop="@drawable/photo_red_package_selector"
                android:drawablePadding="10dp"
                android:gravity="center_horizontal"
                android:textSize="13sp"
                android:clickable="true"/>
            <TextView
                android:id="@+id/tv_video_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/video_normal"
                android:textColor="@android:color/white"
                android:drawableTop="@drawable/video_normal_selector"
                android:drawablePadding="10dp"
                android:gravity="center_horizontal"
                android:textSize="13sp"
                android:clickable="true"
                />
            <TextView
                android:id="@+id/tv_video_red_package"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/video_red_package"
                android:textColor="@android:color/white"
                android:drawableTop="@drawable/video_red_package_selector"
                android:drawablePadding="10dp"
                android:gravity="center_horizontal"
                android:textSize="13sp"
                android:clickable="true"
                />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>