<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/activity_backgroup">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:fitsSystemWindows="true"
            android:clipChildren="false">
                <!--状态栏-->
                <View
                    android:id="@+id/view_status"
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:visibility="gone"
                    android:background="@color/colorTheme"
                    android:layout_alignParentTop="true"/>
                <include
                    android:id="@+id/toolbar"
                    layout="@layout/layout_toolbar"/>

                <FrameLayout
                    android:id="@+id/fl_container"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />

                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="49dp"-->
                <!--android:layout_alignParentBottom="true"-->
                <!--android:background="@android:color/white"-->
                <!--android:orientation="horizontal"-->
                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryLighter" />


                <could.bluepay.widget.BadgeRadioGroup
                        android:id="@+id/rg_outer_fragment"
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:animateLayoutChanges="true"
                        android:orientation="horizontal">

                        <could.bluepay.widget.BadgeRadioButton
                            android:id="@+id/rb_list"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:drawable_top="@drawable/radio_button_list_selector"
                            app:drawable_text="@string/ui_title_portray"
                            app:text_color_checked="@color/colorBottomTabTextCheck"
                            app:text_color_unchecked="@color/colorBottomTabTextNormal" />

                        <could.bluepay.widget.BadgeRadioButton
                            android:id="@+id/rb_dynamic"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:drawable_top="@drawable/radio_button_photo_selector"
                            app:drawable_text="@string/ui_title_dynamic"
                            app:text_color_checked="@color/colorBottomTabTextCheck"
                            app:text_color_unchecked="@color/colorBottomTabTextNormal" />
                        <ImageView
                            android:id="@+id/btn_public"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="62dp"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/button_live_selector"
                            android:scaleType="fitCenter"
                            android:layout_marginBottom="5dp"
                            android:clickable="true"
                            android:onClick="onClick"
                            android:layout_gravity="bottom" />

                        <could.bluepay.widget.BadgeRadioButton
                            android:id="@+id/rb_vip"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:drawable_top="@drawable/radio_button_announcement_selector"
                            app:drawable_text="@string/ui_title_vip"
                            app:text_color_checked="@color/colorBottomTabTextCheck"
                            app:text_color_unchecked="@color/colorBottomTabTextNormal" />

                        <could.bluepay.widget.BadgeRadioButton
                            android:id="@+id/rb_my"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:drawable_top="@drawable/radio_button_my_selector"
                            app:drawable_text="@string/ui_title_my"
                            app:text_color_checked="@color/colorBottomTabTextCheck"
                            app:text_color_unchecked="@color/colorBottomTabTextNormal" />
                    </could.bluepay.widget.BadgeRadioGroup>

        </LinearLayout>
        <could.bluepay.renyumvvm.widget.imageWatcher.ImageWatcher
            android:id="@+id/image_watcher"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </RelativeLayout>
</layout>